[package]
name = "cart"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
clap = { version = "4.3", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
va_list = "0.2.0"

[[bin]]
name = "cart"
path = "src/main.rs"

[lib]
name = "cartstd"
path = "src/cart_std/lib.rs"
crate-type = ["staticlib"]
